<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_1_choice_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_answer_1"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/question_1_choice_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_answer_2"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/question_1_choice_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_answer_3"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/question_1_choice_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1_answer_4"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_2_choice_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_answer_1"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/question_2_choice_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_answer_2"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/question_2_choice_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_answer_3"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/question_2_choice_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2_answer_4"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_3_choice_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_1"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/question_3_choice_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_2"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/question_3_choice_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_3"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/question_3_choice_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3_answer_4"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/question_4_choice_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_answer_1"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/question_4_choice_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_answer_2"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/question_4_choice_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_answer_3"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/question_4_choice_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_4_answer_4"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/question_5_choice_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_1"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/question_5_choice_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_2"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/question_5_choice_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_3"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/question_5_choice_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_5_answer_4"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_6"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/question_6_choice_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_answer_1"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/question_6_choice_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_answer_2"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/question_6_choice_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_answer_3"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>

            <CheckBox
                android:id="@+id/question_6_choice_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_6_answer_4"
                android:paddingLeft="16dp"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_7"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/question_7_answer_space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit"/>
    </LinearLayout>
</ScrollView>